# ipa-mcp

./: .gitignore  LICENSE  README.md  pyproject.toml
ipa_mcp/: ipa_client.py  server.py
