[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ipa-mcp"
version = "1.3.0"
description = "FreeIPA MCP server for user/host group management, HBAC, and sudo rules"
readme = "README.md"
requires-python = ">=3.12"
license = "Apache-2.0"
keywords = ["mcp", "model-context-protocol", "freeipa", "ipa"]
dependencies = [
  "fastmcp>=3.0.0,<4",
  "httpx>=0.28.1",
  "mcp-common @ git+https://github.com/puhamihai/mcp-common",
  "pydantic>=2.0",
  "pydantic-settings>=2.0",
  "typer>=0.15.0",
]

[project.scripts]
ipa-cli = "ipa_mcp.cli:main"
ipa-mcp = "ipa_mcp.server:main"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["ipa_mcp"]
